# genai-interview-lab

./: .gitignore  README.md  code-walkthrough.md  repository_explained.md  thoughtworks-guide.md
Day-2/revision-llm-poc/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.ollama  Dockerfile.ui  README.md  docker-compose.yaml  pyproject.toml
Day-2/revision-llm-poc/src/app/: main.py
Day-2/revision-llm-poc/src/config/: logging.py  settings.py
Day-2/revision-llm-poc/src/core/: llm_client.py  models.py  services.py
Day-2/revision-llm-poc/src/ui/: revision_ui.py
Day-2/revision-llm-poc/tests/: test_app.py
Day31/terraform-genai-release-notes-poc/: .env.example  README.md  app.sh  pyproject.toml
Day31/terraform-genai-release-notes-poc/src/app/: main.py
Day31/terraform-genai-release-notes-poc/src/config/: settings.py
Day31/terraform-genai-release-notes-poc/src/core/: llm_client.py  models.py  services.py
Day31/terraform-genai-release-notes-poc/terraform/envs/dev/: backend.tf  locals.tf  main.tf  outputs.tf  variables.tf
Day31/terraform-genai-release-notes-poc/terraform/modules/dns/: main.tf  outputs.tf  variables.tf
Day31/terraform-genai-release-notes-poc/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
Day31/terraform-genai-release-notes-poc/terraform/modules/s3_docs/: main.tf  outputs.tf  variables.tf
Day31/terraform-genai-release-notes-poc/tests/: test_app.py
Day32/terraform-genai-release-topic-poc/: .env.example  Dockerfile.api  Dockerfile.model  Dockerfile.ui  README.md  docker-compose.local.yaml  pyproject.toml
Day32/terraform-genai-release-topic-poc/docs/: DAY32_ARCHITECTURE_OVERVIEW.md  DAY32_POC_CHARter.md
Day32/terraform-genai-release-topic-poc/k8s/base/: api-deployment.yaml  app-configmap.yaml  ingress.yaml  model-service-deployment.yaml  namespace.yaml  ui-deployment.yaml
Day32/terraform-genai-release-topic-poc/scripts/: build_and_deploy_dev.sh  deploy_dev_k8s.sh
Day32/terraform-genai-release-topic-poc/src/app/: main.py
Day32/terraform-genai-release-topic-poc/src/config/: settings.py
Day32/terraform-genai-release-topic-poc/src/core/: llm_client.py  models.py  services.py
Day32/terraform-genai-release-topic-poc/src/model_service/: main.py
Day32/terraform-genai-release-topic-poc/src/ui/: app.py
Day32/terraform-genai-release-topic-poc/terraform/day32_release_topic/envs/dev/: backend.tf  locals.tf  main.tf  outputs.tf  tfplan2  variables.tf
Day32/terraform-genai-release-topic-poc/terraform/day32_release_topic/modules/acm_cert/: main.tf  outputs.tf  (+1 more)
Day32/terraform-genai-release-topic-poc/tests/: test_app.py  test_llm_integration.py  test_model_service.py
(+118 files in other folders)
