[project]
name = "revision-llm-poc"
version = "0.1.0"
description = "LLM-powered interview explanation API"
requires-python = ">=3.10"
authors = [
    {name = "Radheshyam tiwari", email = "tiwari.rdhtiwari@gmail.com"}
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.22.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "openai>=1.6.0",
  "streamlit>=1.40.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]